# $Id$

2006-02-15	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: correct handling for MySQL's forcing of single queries.

	* main/Containers/UnifiedContainer.class.php: wrong list/clones
	default fixed.

2006-02-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Base/ImageType.class.php, core/Form/PrimitiveImage.class.php:
	image uploading helpers.

	* 0.2.8 released.

2006-02-04	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/Form.class.php: reflection-based object exporter.

2006-02-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Module/EditorModule.class.php: allow selfRedirect() tweaking.

	* core/Form/Form.class.php: simple reflection-based object importer
	implemented.

2006-01-31	Anton E. Lebedevich	<noiselist@pochta.ru>

	* core/Base/Timestamp.class.php,
	main/Base/CalendarMonthWeekly.class.php: week start and end day moved
	to Timestamp from CalendarMonthWeekly.

	* main/Containers/StorableContainer.class.php: don't be so strict in
	getList().

	* core/OSQL/InsertOrUpdateQuery.class.php: lazySet now even lazier.

2006-01-30	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/InterbaseDialect.class.php,
	incubator/classes/DB/IBase.class.php: moved to incubator, since i
	don't want to support it anymore.

2006-01-29	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/DropTableQuery.class.php: drop table implementation.

2006-01-28	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: first and dirty schema generation implementation.

2006-01-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/Singletone.class.php: renamed to Singleton.class.php.

	* core/OSQL/: implemented auto-increment columns generation for PgSQL,
	MySQL, IBase and SQLite.

2006-01-26	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/InsertOrUpdateQuery.class.php: setId() renamed to
	lazySet() to avoid collision with Query interface.

	* core/OSQL/: support for table creation added.
